[package]
name = "image-preview-v1"
version = "0.1.0"
authors = ["Mahmoud Harmouch <business@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
